--- a/views/orderDetail.ejs
+++ b/views/orderDetail.ejs
@@ -84,22 +84,20 @@
         <div class="comment-inner">
             <p class="comment-head">
                 商品评论
-                <span class="cmt">写评论</span>
-            </p>
-            <div class="comment-write">
-                <textarea class="cmt-write"></textarea>
-                <input type="button" value="评 论" gid="{$goodsinfo.gid}" class="cmt-btn" id="cmt-btn" required="required">
-            </div>
+                <!--<span class="cmt">写评论</span>-->
             </p>
 
             <div class="comment-content">
 
-                {foreach from=$comments item=comment}
+                <% goods.forEach(function(goods){%>
+                <% goods.comments.forEach(function (comment) { %>
                 <p class="comment-list">
-                    <span class="cmt-list-content">{$comment.content}</span>
-                    <span class="cmt-list-time cmt-list-other">{$comment.time}</span><span class="cmt-list-neme cmt-list-other">{$comment.uname}</span>
+                    <span class="cmt-list-name"><%= comment.name%></span>
+                    <span class="cmt-list-content"><%= comment.comment%></span>
+                    <span class="cmt-list-time cmt-list-other"><%= new Date(parseInt(comment.time)).toLocaleString() %></span>
                 </p>
-                {/foreach}
+                <%})%>
+                <% }) %>
 
 
             </div>
