--- a/views/orderOnline.ejs
+++ b/views/orderOnline.ejs
@@ -54,11 +54,11 @@
                 <ul class="c-l-ul">
                     <li><a href="/toCenter">账户详情</a></li>
                     <li><a href="#" class="order-focus">我的关注</a></li>
-                    <li><a href="#" class="order-focus">我的订单</a></li>
+                    <li><a href="/myOrders" class="order-focus">我的订单</a></li>
+                    <li><a href="/unSureOrder" class="order-focus">待确认订单</a></li>
                     <li><a href="/getCart">我的购物车</a></li>
                     <li><a href="/uploadOrder">发布商品</a></li>
                     <li><a href="/orderOnline">在线商品</a></li>
-                    <li><a href="/orderOnline">已拍出商品</a></li>
                 </ul>
             </div>
         <div class="c-right">
@@ -67,7 +67,8 @@
 
                 <tr class="c-r-table">
                     <th class="c-r-td-addLength">商品名称</th>
-                    <th>数量</th>
+                    <th>库存量</th>
+                    <th>售出量</th>
                     <th>单价</th>
                     <th class="c-r-td-addLength">联系方式</th>
                     <th class="c-r-td-addLength">Email</th>
@@ -83,6 +84,12 @@
                     <td style="display: none" class="order-id"><%= order._id%></td>
                     <td class="c-r-td-addLength"><%= order.goodsName%></td>
                     <td style="color:#dd2727"><%= order.num%></td>
+
+                    <% if (order.outNum) { %>
+                        <td><%= order.outNum%></td>
+                    <% } else { %>
+                        <td>--</td>
+                    <% } %>
                     <td><%= order.price%></td>
                     <td><%= order.tel%></td>
                     <td><%= order.email%></td>
@@ -95,6 +102,11 @@
                     <td style="display: none" class="order-id"><%= order._id%></td>
                 <td class="c-r-td-addLength"><%= order.goodsName%></td>
                 <td><%= order.num%></td>
+                    <% if (order.outNum) { %>
+                    <td><%= order.outNum%></td>
+                    <% } else { %>
+                    <td>--</td>
+                    <% } %>
                 <td><%= order.price%></td>
                 <td><%= order.tel%></td>
                 <td><%= order.email%></td>
