--- a/views/unSureOrder.ejs
+++ b/views/unSureOrder.ejs
@@ -57,22 +57,23 @@
                 <ul class="c-l-ul">
                     <li><a href="/toCenter">账户详情</a></li>
                     <li><a href="#" class="order-focus">我的关注</a></li>
-                    <li><a href="#" class="order-focus">我的订单</a></li>
+                    <li><a href="/myOrders" class="order-focus">我的订单</a></li>
                     <li><a href="/unSureOrder" class="order-focus">待确认订单</a></li>
                     <li><a href="/getCart">我的购物车</a></li>
                     <li><a href="/uploadOrder">发布商品</a></li>
                     <li><a href="/orderOnline">在线商品</a></li>
-                    <li><a href="/orderOnline">已拍出商品</a></li>
                 </ul>
             </div>
             <div class="c-right">
                 <h1 class="c-r-h1">待确认订单</h1>
                 <div class="spC-list">
                     <div class="spC-list-th">
-                        <span class="spC-list-th-span" style="width: 350px;">商品</span>
-                        <span class="spC-list-th-span" style="width: 150px;">单价（元）</span>
-                        <span class="spC-list-th-span" style="width: 180px;">数量</span>
-                        <span class="spC-list-th-span" style="width: 150px;">小计（元）</span>
+                        <span class="spC-list-th-span" style="width: 290px;">商品</span>
+                        <span class="spC-list-th-span" style="width: 100px;">单价（元）</span>
+                        <span class="spC-list-th-span" style="width: 120px;">数量</span>
+                        <span class="spC-list-th-span" style="width: 120px;">小计（元）</span>
+                        <span class="spC-list-th-span" style="width: 100px;">确认订单</span>
+                        <span class="spC-list-th-span" style="width: 100px;">取消订单</span>
                     </div>
                     <ul class="spC-list-ul">
 
