--- a/views/orderOfMe.ejs
+++ b/views/orderOfMe.ejs
@@ -58,10 +58,10 @@
                     <li><a href="/toCenter">账户详情</a></li>
                     <li><a href="#" class="order-focus">我的关注</a></li>
                     <li><a href="/myOrders" class="order-focus">我的订单</a></li>
+                    <li><a href="/unSureOrder" class="order-focus">待确认订单</a></li>
                     <li><a href="/getCart">我的购物车</a></li>
                     <li><a href="/uploadOrder">发布商品</a></li>
                     <li><a href="/orderOnline">在线商品</a></li>
-                    <li><a href="/orderOnline">已拍出商品</a></li>
                 </ul>
             </div>
             <div class="c-right">
