--- a/views/person-center.ejs
+++ b/views/person-center.ejs
@@ -70,8 +70,8 @@
                         <h2>账户信息</h2>
                         <ul class="infos">
                             <li>昵称</li>
-                            <li class="right_info">
-                                <span id="nickname_span" style="display: inline;"></span>
+                            <li class="">
+                                <span id="nickname_span" style="display: inline;margin-left: 30px;"></span>
                                 <!--<input type="text" value="石头软软软" id="nickname" style="display: none;">-->
                             </li>
                         </ul>
