--- a/views/signIn.ejs
+++ b/views/signIn.ejs
@@ -16,10 +16,14 @@
             <p class="login-title">用户登陆</p>
             <div class="signText">
                 <form id="zcForm">
-                    用户名：<input type="text" id="username" name="username" class="signText-input"
-                            style="margin-top: 25px;"><br/>
-                    密&nbsp;&nbsp;&nbsp;码 ：<input type="password" id="password" name="password"
-                                                 class="signText-input"style="margin-top: 25px;"><br/>
+                    <p style="width: 260px;height: 38px;border: 2px solid #cbcbcb;">
+                        <span><img src="/images/icon-username.png" style="display: inline-block;position: relative;">
+                    </span><input type="text" id="username" name="username" class="signText-input" placeholder="用户名">
+                    </p><br/>
+                    <p style="width: 260px;height: 38px;border: 2px solid #cbcbcb;position:relative;top:20px;">
+                        <span><img src="/images/icon-password.png" style="display: inline-block;position: relative;">
+                        </span><input type="password" id="password" name="password" class="signText-input" placeholder="密 码">
+                    </p><br/>
                     <button class="signIn signBtn">登 陆</button>
                     <p class="toSignIn" id="toSignUp"><a href="/signUp" class="to-sign">>> 去注册</a></p>
                     <p id="warning"></p>
