--- a/views/signUp.ejs
+++ b/views/signUp.ejs
@@ -15,12 +15,16 @@
             <p class="login-title">用户注册</p>
             <div class="signText">
                 <form id="signForm">
-                    用 户 名&nbsp;：&nbsp;<input type="text" id="username" name="username"  class="signText-input"><br/>
-                    用户邮箱：<input type="email" id="email" name="email"  class="signText-input"><br/>
-                    密码设置：<input type="password" id="password" name="password"  class="signText-input"><br/>
-                    重复密码：<input type="password" id="pswSure"  class="signText-input"><br/>
-                    <button class="signBtn signBtnUp signUp">注 册</button>
-                    <p class="toSignIn" id="toSignIn"><a href="/signIn" class="to-sign">>> 去登陆</a></p>
+                    用 户 名&nbsp;：&nbsp;<input type="text" id="username" name="username"  class="signText-input"
+                            style="border: 1px solid rgba(0,0,0,0.6);margin-top: 20px;position: relative;top:0;"><br/>
+                    用户邮箱：<input type="email" id="email" name="email"  class="signText-input"
+                                style="border: 1px solid rgba(0,0,0,0.6);margin-top: 20px;position: relative;top:0;"><br/>
+                    密码设置：<input type="password" id="password" name="password"  class="signText-input"
+                                style="border: 1px solid rgba(0,0,0,0.6);margin-top: 20px;position: relative;top:0;"><br/>
+                    重复密码：<input type="password" id="pswSure"  class="signText-input"
+                                style="border: 1px solid rgba(0,0,0,0.6);margin-top: 20px;position: relative;top:0;"><br/>
+                    <button class="signBtn signBtnUp signUp" style="width:212px;margin-top: 35px;">注 册</button>
+                    <p class="toSignIn" id="toSignIn" style="margin-top: 22px;"><a href="/signIn" class="to-sign">>> 去登陆</a></p>
                     <p id="warning"></p>
                 </form>
             </div>
