--- a/views/correctOrder.ejs
+++ b/views/correctOrder.ejs
@@ -19,7 +19,9 @@
 
             <div class="h-right">
                 <div id="person_info" class="clearfix">
-                    <div class="avatar"></div>
+                    <div class="avatar">
+                        <img src="/images/icon-person.png" style="display: inline-block;width: 100%;height: 100%">
+                    </div>
                     <div class="personal-center">
                         <div class="center-nav">
                             <p class="h-r-userName">欢迎，<%= username%></p>
