--- a/views/orderFocus.ejs
+++ b/views/orderFocus.ejs
@@ -18,7 +18,9 @@
 
             <div class="h-right">
                 <div id="person_info" class="clearfix">
-                    <div class="avatar"></div>
+                    <div class="avatar">
+                        <img src="/images/icon-person.png" style="display: inline-block;width: 100%;height: 100%">
+                    </div>
                     <div class="personal-center">
                         <div class="center-nav">
                             <p class="h-r-userName">欢迎，<%= username%></p>
@@ -69,18 +71,30 @@
                 <thead>
                 <tr class="c-r-table">
                     <th class="c-r-td-addLength">商品名称</th>
-                    <th>数量</th>
-                    <th>单价</th>
-                    <th>出售人</th>
-                    <th class="c-r-td-addLength">联系方式</th>
-                    <th class="c-r-td-addLength">Email</th>
-                    <th class="c-r-td-addLength">发布时间</th>
-                    <th>加入购物车</th>
-                    <th>删除</th>
+                    <th style="width: 95px;">数量</th>
+                    <th style="width: 95px;">单价</th>
+                    <th style="width: 95px;">出售人</th>
+                    <th class="c-r-td-addLength" style="width: 95px;">联系方式</th>
+                    <th class="c-r-td-addLength" style="width: 95px;">Email</th>
+                    <th style="width: 95px;">加入购物车</th>
+                    <th style="width: 95px;">删除</th>
                 </tr>
                 </thead>
                 <tbody>
-
+                <% orders.forEach(function (order) { %>
+                <tr><td class='order-id' style='display: none'><%= order._id%></td>
+                    <td class='c-r-td-addLength'><%= order.goodsName%></td>
+                    <td><%= order.num%></td>
+                    <td><%= order.price%></td>
+                    <td><%= order.username%></td>
+                    <td><%= order.tel%></td>
+                    <td><%= order.email%></td>
+                    <% if (order.num === 0) { %>
+                    <td class='edit' id='correct' style='color:#dd2727;'>售 罄</td><td class='edit delete'>取消关注</td></tr>
+                    <% } else { %>
+                    <td class='edit cart' id='correct'>加入购物车</td><td class='edit delete'>取消关注</td></tr>
+                    <% }%>
+                <% })%>
                 </tbody>
             </table>
 
